Replace call to deprecated URL constructor. Closes #15